# startalk_pc

./: .gitignore  CMakeLists.txt  README.md
CustomUi/: CMakeLists.txt  GroupMemberPopWnd.hpp  HeadPhotoLab.cpp  HeadPhotoLab.h  ImageLabel.cpp  ImageLabel.h  Line.h  LinkButton.h  LiteMessageBox.cpp  LiteMessageBox.h  MedalWgt.cpp  MedalWgt.h  ModButton.h  NTMessageBox.cpp  NTMessageBox.h  NavigationItem.cpp  NavigationItem.h  QtMessageBox.cpp  QtMessageBox.h  SearchEdit.hpp  TextEdit.cpp  TextEdit.h  TitleBar.cpp  TitleBar.h  UCButton.cpp  UCButton.h  UShadowBorder.cpp  UShadowBorder.h  UShadowEffect.h  UShadowWnd.cpp  UShadowWnd.h  ushadowdialog.qrc
DataBasePlug/: CMakeLists.txt  CacheDataDao.cpp  CacheDataDao.h  ConfigDao.cpp  ConfigDao.h  DaoInterface.h  DataBasePlug.cpp  DataBasePlug.h  DbConfig.cpp  DbConfig.h  FriendListDao.cpp  FriendListDao.h  GroupDao.cpp  GroupDao.h  GroupMemberDao.cpp  GroupMemberDao.h  MedalListDao.cpp  MedalListDao.h  MessageDao.cpp  MessageDao.h  ProcessExceptDao.cpp  ProcessExceptDao.h  QuickReplyDao.cpp  QuickReplyDao.h  SessionListDao.cpp  SessionListDao.h  TriggerConfig.cpp  TriggerConfig.h  UserDao.cpp  UserDao.h  UserMedalDao.cpp  UserMedalDao.h  UserSupplementDao.cpp  UserSupplementDao.h
DataCenter/: AppSetting.cpp  AppSetting.h  CMakeLists.txt  NavigationManager.cpp  NavigationManager.h  Platform.cpp  Platform.h  SystemDefine.h  dbPlatForm.cpp  dbPlatForm.h  platform_global.h
Emoticon/: CMakeLists.txt  EmoCellWidget.cpp  EmoIconWgt.cpp  EmoIconWgt.h  EmoLstItemWgt.cpp  EmoPreviewWgt.cpp  EmoticonMainWgt.cpp  EmoticonMainWgt.h  EmoticonManager.cpp  EmoticonManager.h  EmoticonView.cpp  EmoticonView.h  LocalEmoticon.cpp  LocalEmoticon.h  MessageManager.cpp  MessageManager.h  NetEmoticon.h
EventBus/: CMakeLists.txt
LogicBase/: BaseUtil.cpp  BaseUtil.hpp  CMakeLists.txt  IQMessage.h  LogicBase.cpp  LogicBase.h  MemoryStream.h  MessageManager.cpp  MessageManager.h  MessageStruct.h  ParseFailedException.h  ProtobufParser.cpp  ProtobufParser.h  ProtobufStack.cpp  ProtobufStack.h  ProtobufStream.cpp  ProtobufStream.h  ProtobufStreamDelegate.h  QTalkSecurity.cpp  QTalkSecurity.h  RSAHelper.cpp  RSAHelper.h  Stream.h  dllMain.cpp  logicbase_global.h  nativeSocket.cpp  pb2json.cpp  pb2json.h
LogicBase/Protobuf/: message.pb.cc  message.pb.h
LogicCommunication/: CMakeLists.txt  Communication.cpp  Communication.h  FileHelper.cpp  FileHelper.h  GroupManager.cpp  GroupManager.h  MessageManager.cpp  MessageManager.h  OfflineMessageManager.cpp  OfflineMessageManager.h  OnLineManager.cpp  SearchManager.cpp  UserConfig.cpp  UserConfig.h  UserManager.cpp  UserManager.h
LogicManager/: CMakeLists.txt  LogicManager.cpp  LogicManager.h
Message/: ChatMessage.h  GroupMessage.h  LogicBaseMessage.h  LoginMessgae.h  StatusMessage.h  UselessMessage.h  UserMessage.h
Platform/: AppSetting.h  CMakeLists.txt  NavigationManager.cpp  NavigationManager.h  SystemDefine.h
QTalk/: MainWindow.cpp  QTalkApp.cpp  SystemTray.cpp
QtUtil/: CMakeLists.txt
Screenshot/: CMakeLists.txt  ui_snipscreentoolbar.h
StarTalk/: Application.cpp  Application.h  CMakeLists.txt  GlobalManager.cpp  GlobalManager.h  HangManagerProcess.cpp  HangManagerProcess.h  LocalServer.cpp  LocalServer.h  MacApp.h  MainWindow.cpp  MainWindow.h  MessageManager.cpp  MessageManager.h  NoOperationThread.cpp  NoOperationThread.h  PlugManager.cpp  QTalkApp.cpp  StyleManager.cpp  SystemTray.cpp  SystemTray.h  SystemTrayPopWnd.cpp  SystemTrayPopWnd.h  app.qrc  main.cpp
UIAddressBook/: AddressBookPanel.cpp  AddressBookPanel.h  AddressBookPlug.h  CMakeLists.txt  CreatGroupPoupWnd.cpp  CreatGroupPoupWnd.h  GroupWnd.cpp  GroupWnd.h  ListItemView.cpp  ListItemView.h  MessageManager.cpp  MessageManager.h  StaffDelegate.cpp  StaffDelegate.h  StaffStructure.cpp  StaffStructure.h  UserCard.cpp  UserCard.h
UICardManager/: CMakeLists.txt  CardManager.cpp  CardManager.h  CardManagerPlug.h  GroupCard.cpp  GroupCard.h  MsgManager.cpp  MsgManager.h  UserCard.cpp  UserCard.h  image1.qrc
UIChatViewPlug/: AtMessageTip.h  AtMessageView.cpp  AtMessageView.h  CMakeLists.txt  ChatMainDelegate.cpp  ChatMainDelegate.h  ChatMainSoreModel.cpp  ChatMainSoreModel.h  ChatMainWgt.cpp  ChatMainWgt.h  ChatUtil.cpp  ChatUtil.h  ChatViewItem.cpp  ChatViewItem.h  ChatViewMainPanel.cpp  ChatViewMainPanel.h  DropWnd.h  GIFManager.cpp  GIFManager.h  GroupChatSidebar.cpp  GroupChatSidebar.h  GroupItemDelegate.cpp  GroupItemDelegate.h  GroupMember.cpp  GroupMember.h  GroupTopicEditor.cpp  GroupTopicEditor.h  InputWgt.cpp  InputWgt.h  MacNotification.h  MacNotification.mm  MessageAnalysis.cpp  MessageAnalysis.h  MessageManager.cpp  MessageManager.h  MessagePrompt.cpp  MessagePrompt.h  NativeChatStruct.h  NetImageLabel.cpp  NetImageLabel.h  (+13 more)
UIGroupManager/: AddGroupEdit.h  BatchAddMemberWnd.cpp  BatchAddMemberWnd.h  CMakeLists.txt  ChoseMemberWgt.cpp  ChoseMemberWgt.h  MessageManager.cpp  MessageManager.h  SearchView.cpp  SearchView.h  SearchWgt.cpp  SearchWgt.h  TreeItemDelegate.cpp  TreeItemDelegate.h  UIGroupManager.cpp  UIGroupManager.h  UIGroupManagerPlug.h
UILoginPlug/: AddNavWnd.cpp  AddNavWnd.h  CMakeLists.txt  LoginPanel.cpp  LoginPanel.h  MessageManager.cpp  MessageManager.h  NavManager.cpp  NavManager.h  NavView.cpp  NavView.h  UILoginPlug.h
UINavigationPlug/: CMakeLists.txt  MessageManager.cpp  (+6 more)
UIOAManager/: CMakeLists.txt  MessageManager.cpp  MessageManager.h  NavigationItem.cpp  NavigationItem.h  OADefine.h  OAMainWidget.h  OAManagerPanel.cpp  OAManagerPanel.h  OAManagerPlug.h  OaMainWgt.cpp  OaMainWgt.h
Util/: CMakeLists.txt  DelayTask.hpp  EncodeHelper.h  FrequencyMap.h  Log.cpp  Log.h  Spinlock.h  ThreadPool.h  perfcounter.h  sformat.h  threadhelper.h  util_global.h  utils.cpp  utils.h
Util/Entity/: JID.cpp  JID.h
Util/ini/: ConfigLoader.cpp  ConfigLoader.h
Util/lazy/: lazyq.cpp  lazyq.h  lazyqHelper.h  lazyqImpl.h  lazyqhelper.cpp
Util/nJson/: nJson.h
Util/ui/: StyleDefine.cpp  StyleDefine.h  uicom.cpp  uicom.h
Util/ui/qconfig/: qconfig.cpp  qconfig.h
Util/ui/qimage/: qimage.cpp  qimage.h
(+195 files in other folders)
